<resources>
    <string name="app_name">Fitness Tracker</string>
    <string name="weight">Peso (Kg)</string>
    <string name="height">Altura (cm)</string>
    <string name="calc">Calcular</string>
    <string name="field_messages">Todos os campos devem ser maiores que 0</string>
    <string name="age">Idade</string>
    <string name="gender1">Masculino</string>
    <string name="gender2">Feminino</string>
    // IMC
    <string name="label_imc">IMC</string>
    <string name="imc_desc">IMC é a sigla para Índice de Massa Corporal que serve para avaliar o peso
        do indivíduo em relação à sua altura e assim indicar se está dentro do peso ideal,
        acima ou abaixo do peso desejado.\n\n Preencha os campos de peso e altura para descobrir o seu IMC.</string>
    <string name="imc_severely_low_weight">Severamente abaixo do peso</string>
    <string name="imc_very_low_weight">Muito abaixo do peso</string>
    <string name="imc_low_weight">Abaixo do peso</string>
    <string name="imc_normal">Normal</string>
    <string name="imc_hight_weight">Acima do peso</string>
    <string name="imc_so_hight_weight">Moderadamente obeso</string>
    <string name="imc_severely_hight_weight">Severamente obeso</string>
    <string name="imc_extreme_weight">Extremamente obeso</string>
    <string name="imc_response">Seu IMC é: %1$.2f </string>

    // TMB
    <string name="label_tmb">TMB</string>
    <string name="tmb_desc">O cálculo da TMB (Taxa de Metabolismo Basal) indica quantas calorias o seu corpo gasta em repouso absoluto, apenas para manter funções
        vitais como respiração, circulação sanguínea, controle da temperatura corporal, funcionamento do cérebro e dos órgãos. \n\n
        Preencha os campos de peso, altura, idade e sexo para descobrir o seu TMB.</string>
    <string name="tmb_severely_low_weight">TMB muito baixa: Pode indicar baixa massa muscular ou condições que reduzem o metabolismo (ex.: hipotireoidismo, sedentarismo).</string>
    <string name="tmb_low_weight">TMB baixa: Comum em mulheres, pessoas com menor massa muscular ou com baixa atividade física.</string>
    <string name="tmb_normal">TMB média: Faixa comum para pessoas com estilo de vida moderadamente ativo e composição corporal balanceada.</string>
    <string name="tmb_hight_weight">TMB alta: Comum em homens, pessoas com maior massa muscular ou que praticam atividades físicas regulares.</string>
    <string name="tmb_severely_hight_weight">TMB muito alta: Geralmente encontrada em pessoas com alta massa muscular ou atletas que praticam exercícios intensos.</string>
    <string name="tmb_response">Seu TMB é: %1$.2f kcal</string>

    //GET
    <string name="get_desc">O Gasto Energético Total (GET) representa a quantidade total de calorias que uma pessoa gasta em um dia, considerando:\n
        TMB (Taxa Metabólica Basal) → calorias gastas em repouso.\n
        Atividades físicas e rotineiras → andar, trabalhar, treinar, etc. </string>
    <string name="get_physical_activity">Seu nível de atividade física</string>
    <string name="get_sedentary">Sedentário</string>
    <string name="get_light">Leve</string>
    <string name="get_moderate">Moderado</string>
    <string name="get_active">Ativo</string>
    <string name="get_extreme">Extremo</string>
    <string name="get_nivel_sedentary">GET muito baixa: Pode indicar subalimentação ou metabolismo muito lento..</string>
    <string name="get_nivel_low">GET baixa: Comum em pessoas sedentárias ou com baixa massa muscular.</string>
    <string name="get_nivel_normal">GET Média: Faixa padrão para adultos com atividade leve a moderada.</string>
    <string name="get_nivel_hight">GET alta: Indica atividade física regular, metabolismo mais acelerado ou maior massa.</string>
    <string name="get_nivel_severely_hight">GET muito alta: Comum em atletas, pessoas com metabolismo acelerado ou trabalhos físicos intensos.</string>
    <string name="get_response">Seu GET é: %1$.2f kcal/dia </string>

    //PGC
    //man
    <string name="pgc_desc">O PGC (Percentual de Gordura Corporal) é uma estimativa da porcentagem do corpo que é composta por gordura.</string>
    <string name="pgc_man_excelent">Excelente! Corpo atlético, definição muscular. </string>
    <string name="pgc_man_good">Bom! Boa forma, visivelmente saudável. </string>
    <string name="pgc_man_acceptable">Aceitável! Saudável, pouca definição. </string>
    <string name="pgc_man_bad">Acima do ideal! Leve excesso de gordura. </string>
    <string name="pgc_man_very_bad">Obesidade! Alto risco à saúde. </string>
    //woman
    <string name="pgc_woman_excelent">Excelente! Corpo atlético, definição muscular. </string>
    <string name="pgc_woman_good">Bom! Boa forma, visivelmente saudável. </string>
    <string name="pgc_woman_acceptable">Aceitável! Saudável, pouca definição. </string>
    <string name="pgc_woman_bad">Acima do ideal! Leve excesso de gordura. </string>
    <string name="pgc_woman_very_bad">Obesidade! Alto risco à saúde. </string>

    <string name="pgc_response">Seu PGC é: %1$.2f %%</string>
    <string name="saved">Registro Salvo com sucesso!</string>

    //Results
    <string name="list_response">resultado: %1$.2f, data: %2$s</string>
    <string name="search">Buscar</string>
    <string name="label_pgc">PGC</string>
    <string name="label_get">GET</string>

</resources>